--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -22,6 +22,7 @@
       "@overbookd/permission": ["./constants/permission/src"],
       "@overbookd/personal-account": ["./domains/personal-account/src"],
       "@overbookd/planning": ["./domains/planning/src"],
+      "@overbookd/preference": ["./constants/preference/src"],
       "@overbookd/registration": ["./domains/registration/src"],
       "@overbookd/signa": ["./domains/signa/src"],
       "@overbookd/slugify": ["./libraries/slugify/src"],
