--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -68,6 +68,7 @@
     "@overbookd/permission": "workspace:*",
     "@overbookd/personal-account": "workspace:*",
     "@overbookd/planning": "workspace:*",
+    "@overbookd/preference": "workspace:*",
     "@overbookd/registration": "workspace:*",
     "@overbookd/signa": "workspace:*",
     "@overbookd/slugify": "workspace:*",
