--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overbookd",
-  "version": "3.40.4",
+  "version": "3.40.5-rc.0",
   "main": "index.js",
   "keywords": [],
   "license": "Apache-2.0",
