--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,6 +7,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "allowJs": true,
+    "checkJs": false,
     "target": "ES2022",
     "sourceMap": true,
     "outDir": "./dist",
