feat(csv): add lib to handle csv generation #2414

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -54,9 +54,10 @@
     "@overbookd/access-manager": "workspace:*",
     "@overbookd/alerts": "workspace:*",
     "@overbookd/assignment": "workspace:*",
-    "@overbookd/configuration": "workspace:*",
     "@overbookd/charisma": "workspace:*",
+    "@overbookd/configuration": "workspace:*",
     "@overbookd/contribution": "workspace:*",
+    "@overbookd/csv": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
     "@overbookd/festival-event-constants": "workspace:*",
