--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "@overbookd/charisma": "workspace:*",
     "@overbookd/configuration": "workspace:*",
     "@overbookd/contribution": "workspace:*",
+    "@overbookd/csv": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/event": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
