--- a/domains/assignment/package.json
+++ b/domains/assignment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/assignment",
-  "version": "1.4.13",
+  "version": "1.4.14",
   "description": "Gestion de l'affectation pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -54,6 +54,7 @@
     "pnpm": "10.8.0"
   },
   "dependencies": {
+    "@overbookd/preference": "workspace:*",
     "@overbookd/festival-event-constants": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/team-constants": "workspace:*",
