--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.22.77",
+  "version": "2.22.78",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -54,9 +54,10 @@
     "@overbookd/access-manager": "workspace:*",
     "@overbookd/alerts": "workspace:*",
     "@overbookd/assignment": "workspace:*",
-    "@overbookd/configuration": "workspace:*",
     "@overbookd/charisma": "workspace:*",
+    "@overbookd/configuration": "workspace:*",
     "@overbookd/contribution": "workspace:*",
+    "@overbookd/csv": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
     "@overbookd/festival-event-constants": "workspace:*",
