--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -23,5 +23,5 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["**/dist", "**/node_modules", "**/build"]
+  "exclude": ["**/dist", "**/node_modules", "**/build", "**/prisma/generated"]
 }
