--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -65,6 +65,7 @@
     "@overbookd/web-page": "workspace:*",
     "@vite-pwa/nuxt": "1.0.3",
     "@vueuse/core": "13.3.0",
+    "awesome-phonenumber": "7.5.0",
     "chart.js": "4.4.9",
     "chartjs-adapter-luxon": "1.3.1",
     "csv-parse": "5.6.0",
