--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.6.30",
+  "version": "3.6.31",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -65,6 +65,7 @@
     "@overbookd/web-page": "workspace:*",
     "@vite-pwa/nuxt": "1.0.3",
     "@vueuse/core": "13.3.0",
+    "awesome-phonenumber": "7.5.0",
     "chart.js": "4.4.9",
     "chartjs-adapter-luxon": "1.3.1",
     "csv-parse": "5.6.0",
