--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "@overbookd/preference": "workspace:*",
     "@overbookd/registration": "workspace:*",
     "@overbookd/signa": "workspace:*",
+    "@overbookd/sleep": "workspace:*",
     "@overbookd/slugify": "workspace:*",
     "@overbookd/team": "workspace:*",
     "@overbookd/team-constants": "workspace:*",
