--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -78,6 +78,7 @@
     "vite-plugin-vuetify": "2.1.1",
     "vue-chartjs": "5.3.2",
     "vue-html-secure": "1.0.10",
+    "vue-virtual-scroller": "2.0.0-beta.8",
     "vuetify": "3.8.10"
   },
   "devDependencies": {
