chore(config): set output for prisma generated client #2487

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
     "vscode": {
       "extensions": [
         "vivaxy.vscode-conventional-commits",
-        "ms-azuretools.vscode-docker",
+        "ms-azuretools.vscode-containers",
         "EditorConfig.EditorConfig",
         "usernamehw.errorlens",
         "mhutchie.git-graph",
