--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,10 +79,10 @@
     "editor.defaultFormatter": "ms-python.autopep8"
   },
   "[dockerfile]": {
-    "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    "editor.defaultFormatter": "ms-azuretools.vscode-containers"
   },
   "[dockercompose]": {
-    "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    "editor.defaultFormatter": "ms-azuretools.vscode-containers"
   },
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
