--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -21,5 +21,5 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["**/dist", "**/node_modules", "**/build", "**/prisma/generated"]
+  "exclude": ["**/dist", "**/node_modules", "**/build", "**/generated"]
 }
