chore(config): set output for prisma generated client #2487
Approved-by: Léon Dumestre <leon.dumestre@gmail.com>

Closes #2487

See merge request 24-heures-insa/overbookd-mono!3522

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -21,5 +21,5 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["**/dist", "**/node_modules", "**/build"]
+  "exclude": ["**/dist", "**/node_modules", "**/build", "**/generated"]
 }
