--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.22.112",
+  "version": "2.22.113",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -18,6 +18,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "pnpm prisma:generate && nest build",
+    "postbuild": "npx cpy-cli \"src/generated/**/*.node\" \"dist/apps/api/src/generated\"",
     "build:ci": "pnpm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -84,6 +85,7 @@
     "body-parser": "2.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "cpy-cli": "5.0.0",
     "ejs": "3.1.10",
     "express-basic-auth": "1.2.1",
     "html-to-pdfmake": "2.5.28",
