prefeat(sso): implement zitadel connection #2569

--- a/docker/.env
+++ b/docker/.env
@@ -12,4 +12,11 @@ OVERBOOKD_JWT_SECRET=supersecret
 OVERBOOKD_SWAGGER_USER=user
 OVERBOOKD_SWAGGER_PASSWORD=password
 
-BASE_URL=https://${OVERBOOKD_DOMAIN}/api
+BASE_URL=https://${OVERBOOKD_DOMAIN}
+
+OIDC_CLIENT_ID=332175682173992983
+ZITADEL_BASE_URL=https://zitadel.24heures.org
+
+NUXT_OIDC_TOKEN_KEY=99JrdjVczE6OrkFCmEPqqYFECge04ZJ3/lzISrQ8qgo=
+NUXT_OIDC_AUTH_SESSION_SECRET=7BnwodtdsOECGbDqTbDrcODC35Bw5PCicOwdQdDdAJUEDfD
+NUXT_OIDC_SESSION_SECRET=QcKaw5FqGFphw6g2XlRvw5PDpnFwXFtow7PDtEMkwqVVY8Kl
