--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -141,8 +141,12 @@ services:
     volumes:
       - ../:/overbookd
     environment:
-      - BASE_URL
-      - HOST=0.0.0.0
+      BASE_URL: ${BASE_URL}
+      ZITADEL_BASE_URL: ${ZITADEL_BASE_URL}
+      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
+      NUXT_OIDC_TOKEN_KEY: ${NUXT_OIDC_TOKEN_KEY}
+      NUXT_OIDC_AUTH_SESSION_SECRET: ${NUXT_OIDC_AUTH_SESSION_SECRET}
+      NUXT_OIDC_SESSION_SECRET: ${NUXT_OIDC_SESSION_SECRET}
     restart: unless-stopped
     networks:
       - traefik-public
