--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.22.114",
+  "version": "2.22.115",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -22,7 +22,7 @@
     "build:ci": "pnpm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "prune": "ts-prune --error --ignore 'index.ts|domains|libraries'",
+    "prune": "ts-prune --error --ignore 'index.ts|domains|libraries|generated|prisma.config.ts'",
     "start": "nest start --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:dev": "nest start --watch --preserveWatchOutput",
@@ -127,9 +127,6 @@
     "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   },
   "jest": {
     "moduleFileExtensions": [
