--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -50,6 +50,7 @@ COPY --chown=node:node --from=builder /overbookd/node_modules /overbookd/node_mo
 COPY --chown=node:node --from=builder /overbookd/apps/api/dist/apps/api /overbookd/apps/api
 COPY --chown=node:node --from=builder /overbookd/apps/api/package.json /overbookd/apps/api/package.json
 COPY --chown=node:node --from=builder /overbookd/apps/api/prisma /overbookd/apps/api/prisma
+COPY --chown=node:node --from=builder /overbookd/apps/api/prisma.config.ts /overbookd/apps/api/prisma.config.ts
 COPY --chown=node:node --from=builder /overbookd/apps/api/node_modules /overbookd/apps/api/node_modules
 COPY --chown=node:node --from=builder /overbookd/libraries /overbookd/libraries
 COPY --chown=node:node --from=builder /overbookd/constants /overbookd/constants
