refactor: benevole to personne

--- a/domains/festival-event/package.json
+++ b/domains/festival-event/package.json
@@ -59,6 +59,7 @@
     "@overbookd/festival-event-constants": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/slugify": "workspace:*",
+    "@overbookd/team-constants": "workspace:*",
     "@overbookd/time": "workspace:*"
   }
 }
