--- a/domains/contribution/package.json
+++ b/domains/contribution/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@overbookd/list": "workspace:*",
     "@overbookd/permission": "workspace:*",
+    "@overbookd/team-constants": "workspace:*",
     "@overbookd/time": "workspace:*"
   }
 }
