--- a/.gitlab/ci/setup-git.gitlab-ci.yml
+++ b/.gitlab/ci/setup-git.gitlab-ci.yml
@@ -3,7 +3,7 @@
     - apk update
     - apk add openssh git
     - eval $(ssh-agent -s)
-    - mkdir ~/.ssh/
+    - mkdir -p ~/.ssh/
     - echo "${SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - echo "Host gitlab.com" >> ~/.ssh/config
