--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,3 +9,6 @@ RUN npm install -g pnpm@10.27.0
 RUN apk update && apk add --no-cache \
   jq \
   openssl
+
+RUN mkdir -p /tmp/.npm && chown -R 501:20 /tmp/.npm
+ENV NPM_CONFIG_CACHE=/tmp/.npm
