--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -87,6 +87,7 @@
     "express-basic-auth": "1.2.1",
     "html-to-pdfmake": "2.5.32",
     "ics": "3.8.1",
+    "jsdom": "27.0.0",
     "jsonwebtoken": "9.0.3",
     "multer": "2.0.2",
     "nodemailer": "7.0.13",
