--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,8 +33,8 @@
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
     "test:unit": "vitest --config ../../vitest.config.ts",
     "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false",
-    "test:e2e": "vitest --config ./test/vitest.e2e-config.ts",
-    "test:e2e:ci": "CI=true vitest --config ./test/vitest.e2e-config.ts --watch=false",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e:ci": "jest --config ./test/jest-e2e.json --ci --reporters=default --reporters=jest-junit --watchAll=false",
     "prisma:generate": "npx prisma generate",
     "database:init": "pnpm prisma:generate && pnpm database:migrate && pnpm database:seed",
     "database:migrate": "npx prisma migrate deploy",
@@ -106,6 +106,7 @@
     "@nestjs/testing": "11.1.12",
     "@types/express": "5.0.6",
     "@types/html-to-pdfmake": "2.4.5",
+    "@types/jest": "30.0.0",
     "@types/jsonwebtoken": "9.0.10",
     "@types/multer": "2.0.0",
     "@types/node": "25.1.0",
@@ -114,6 +115,8 @@
     "@types/pdfmake": "0.2.12",
     "@types/sanitize-html": "2.16.0",
     "@types/supertest": "6.0.3",
+    "jest": "30.2.0",
+    "jest-junit": "16.0.0",
     "prisma": "7.3.0",
     "source-map-support": "0.5.21",
     "supertest": "7.2.2",
