--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.22.121",
+  "version": "2.22.122",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -22,7 +22,7 @@
     "build:ci": "pnpm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "prune": "ts-prune --error --ignore 'index.ts|domains|libraries|generated|prisma.config.ts'",
+    "prune": "ts-prune --error --ignore 'index.ts|domains|libraries|generated|config.ts'",
     "start": "nest start --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:dev": "nest start --watch --preserveWatchOutput",
@@ -31,13 +31,10 @@
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
-    "test:unit": "pnpm prisma:generate && jest",
-    "test:unit:ci": "pnpm prisma:generate && jest --collectCoverage --ci --reporters=default --reporters=jest-junit --watchAll=false",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:unit": "vitest --config ../../vitest.config.ts",
+    "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:e2e:ci": "jest --config ./test/jest-e2e.json --ci --reporters=default --reporters=jest-junit --watchAll=false",
-    "test:watch": "jest --watch",
     "prisma:generate": "npx prisma generate",
     "database:init": "pnpm prisma:generate && pnpm database:migrate && pnpm database:seed",
     "database:migrate": "npx prisma migrate deploy",
@@ -90,6 +87,7 @@
     "express-basic-auth": "1.2.1",
     "html-to-pdfmake": "2.5.32",
     "ics": "3.8.1",
+    "jsdom": "27.0.0",
     "jsonwebtoken": "9.0.3",
     "multer": "2.0.2",
     "nodemailer": "7.0.13",
