--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overbookd",
-  "version": "3.48.5-rc.7",
+  "version": "3.48.5-rc.8",
   "main": "index.js",
   "keywords": [],
   "license": "Apache-2.0",
@@ -42,7 +42,7 @@
     "version:minor:no-sync": "git fetch -ap && pnpm run version:minor-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
     "version:minor": "pnpm run version:minor:no-sync && pnpm run dev:sync-version",
     "version:patch:no-sync": "git fetch -ap && pnpm run version:patch-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
-    "version:patch": "pnpm run version:patch:no-sync && pnpm run dev:sync-version"
+    "release:patch": "pnpm run version:patch:no-sync && pnpm run dev:sync-version"
   },
   "packageManager": "pnpm@10.28.2",
   "engines": {
