--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overbookd",
-  "version": "3.48.5-rc.7",
+  "version": "3.48.5-rc.8",
   "main": "index.js",
   "keywords": [],
   "license": "Apache-2.0",
@@ -37,12 +37,12 @@
     "version:major-dependency": "pnpm --recursive --filter '[origin/main]' run version:major",
     "version:minor-dependency": "pnpm --recursive --filter '[origin/main]' run version:minor",
     "version:patch-dependency": "pnpm --recursive --filter '[origin/main]' run version:patch",
-    "version:major:no-sync": "git fetch -ap && pnpm run version:major-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
-    "version:major": "pnpm run version:major:no-sync && pnpm run dev:sync-version",
-    "version:minor:no-sync": "git fetch -ap && pnpm run version:minor-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
-    "version:minor": "pnpm run version:minor:no-sync && pnpm run dev:sync-version",
-    "version:patch:no-sync": "git fetch -ap && pnpm run version:patch-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
-    "version:patch": "pnpm run version:patch:no-sync && pnpm run dev:sync-version"
+    "release:major:no-sync": "git fetch -ap && pnpm run version:major-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
+    "release:major": "pnpm run version:major:no-sync && pnpm run dev:sync-version",
+    "release:minor:no-sync": "git fetch -ap && pnpm run version:minor-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
+    "release:minor": "pnpm run version:minor:no-sync && pnpm run dev:sync-version",
+    "release:patch:no-sync": "git fetch -ap && pnpm run version:patch-dependency && pnpm run version:bump-dependent && pnpm run release:candidate",
+    "release:patch": "pnpm run version:patch:no-sync && pnpm run dev:sync-version"
   },
   "packageManager": "pnpm@10.28.2",
   "engines": {
