fix: revert jose to jsonwebtoken

--- a/domains/registration/package.json
+++ b/domains/registration/package.json
@@ -59,10 +59,7 @@
     "@overbookd/team-constants": "workspace:*",
     "@overbookd/time": "workspace:*",
     "@overbookd/web-page": "workspace:*",
-    "jsonwebtoken": "9.0.3",
+    "jose": "5.10.0",
     "jwt-decode": "4.0.0"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "9.0.10"
   }
 }
