--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overbookd",
-  "version": "3.48.5-rc.11",
+  "version": "3.48.5-rc.12",
   "main": "index.js",
   "keywords": [],
   "license": "Apache-2.0",
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "db:exec": "run(){ MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env exec api sh -c \"cd /overbookd/apps/api && npx $1\"; }; run",
-    "db:reset": "pnpm run db:exec 'prisma migrate reset' && pnpm run db:exec 'prisma db seed'",
+    "db:seed": "pnpm run db:exec 'prisma generate' && pnpm run db:exec 'prisma db seed'",
+    "db:reset": "pnpm run db:exec 'prisma migrate reset' && pnpm run db:seed",
     "db:migrate": "pnpm run db:exec 'prisma migrate dev'",
     "ci:init": "wget -qO- https://bootstrap.pypa.io/get-pip.py | python3 && python3 -m pip install --upgrade pip && python3 -m pip install pre-commit && pre-commit install --install-hooks --overwrite && pre-commit install --hook-type commit-msg",
     "dev:bash": "docker run --rm --name overbookd_bash --interactive --tty --user $(id -g $USER):$(id -u $USER) -v $(pwd):/overbookd overbookd:dev sh --login",
@@ -24,7 +25,7 @@
     "dev:init": "docker network create traefik-public && pnpm dev:build",
     "dev:logs": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env logs --tail 100 --follow",
     "dev:restart": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env restart",
-    "dev:start": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env up --detach traefik api postgresql adminer mail_catcher web",
+    "dev:start": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env up --detach",
     "dev:stop": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env stop",
     "dev:sync-version": " echo 'Restarting docker containers if running to sync overbookd version' && ((docker restart overbookd_web overbookd_api || true) &)",
     "format": "pnpm --recursive run format",
